--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../CSS/style.css"/>
     <link rel="stylesheet" href="../CSS/register-screen.css">
     <link rel="stylesheet" href="../CSS/login-screen.css">
+    <link rel="stylesheet" href="../CSS/chat-screen.css">
 </head>
 <body>
     <div id="app"></div>
