--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-firestore.js"></script>
     <script src="../index.js"></script>
     <script src="../js/components.js"></script>
     <script src="../js/controller.js"></script>
