--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="../CSS/register-screen.css">
     <link rel="stylesheet" href="../CSS/login-screen.css">
     <link rel="stylesheet" href="../CSS/chat-screen.css">
+    <link rel="stylesheet" href="..//CSS/create-conversation-screen.css">
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        
+    </div>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-auth.js"></script>
